# sloppy-chain

./: .gitignore  Cargo.toml  Makefile  README.md  example.env
crates/api/: Cargo.toml
crates/api/src/: errors.rs  helpers.rs  lib.rs  server.rs
crates/api/src/handlers/: health.rs  mod.rs  tx.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/crypto/: README.md
crates/crypto/src/: core_types.rs  lib.rs
crates/p2p/: Cargo.toml  README.md
crates/p2p/src/: lib.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: account.rs  block.rs  lib.rs  mempool.rs  rust_chain.rs  tx.rs
crates/state/: Cargo.toml
crates/state/src/: db.rs  lib.rs  sloppy.rs
src/: block.rs  main.rs
src/core/: account.rs  block.rs  chain.rs  crypto.rs  mod.rs  tx.rs  tx_pool.rs
src/state/: state.rs
