members = [
    "crates/primitives",
    "crates/crypto"
]

[package]
name = "chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
## Local dependencies
api = {path= "crates/api"}
primitives = {path = "crates/primitives"}
crypto = {path = "crates/crypto"}
state = {path = "crates/state"}

## External Dependencies
trie-db = {git="https://github.com/paritytech/trie", branch="master"}

[[bin]]
name = "main"
path = "src/main.rs"
