members = [
    "crates/primitives",
    "crates/crypto"
]

[package]
name = "chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
## Local dependencies
api = {path = "crates/api"}
config = {path = "crates/config"}
crypto = {path = "crates/crypto"}
primitives = {path = "crates/primitives"}
state = {path = "crates/state"}

## Cargo dependencies
dotenv = "0.15.0"
envconfig = "0.10.0"
env_logger = "0.9.0"
log = "0.4.0"

## Git Dependencies
trie-db = {git="https://github.com/paritytech/trie", branch="master"}

[[bin]]
name = "main"
path = "src/main.rs"
