[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Cargo deps
serde = "1.0.152"
actix-web = "4.2.1"
derive_more = "0.99.17"
actix-rt = "1.0.0"

## Local deps 
config = {path="../config"}
primitives = {path="../primitives"}
state = {path="../state"}